@@ -255,6 +255,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Registration\ComponentRegistrationTestCase.cs" />
+    <Compile Include="Registration\AllTypesOfTestCase.cs" />
     <Compile Include="RuntimeParametersTestCase.cs" />
     <Compile Include="RuntimeParameters\ComponentWithParameters.cs" />
     <Compile Include="SerializationTestCase.cs">
