@@ -342,6 +342,9 @@
     <Compile Include="Registration\RegistrationGroup.cs" />
     <Compile Include="Registration\ServiceOverride.cs" />
     <Compile Include="Registration\ServiceOverrideDescriptor.cs" />
+    <Compile Include="Registration\Strategies\AllTypesOf.cs" />
+    <Compile Include="Registration\Strategies\ServiceDescriptor.cs" />
+    <Compile Include="Registration\Strategies\TypesDescriptor.cs" />
     <Compile Include="Releasers\AllComponentsReleasePolicy.cs">
       <SubType>Code</SubType>
     </Compile>
